# ruin-tts

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml
crates/media-ai/: Cargo.toml
crates/media-ai/src/: agegender.rs  analyze.rs  asr.rs  audio.rs  cluster.rs  diarize.rs  embed.rs  main.rs  models.rs  onnx.rs  segment.rs  separate.rs  types.rs
crates/sea-g2p-rs/: Cargo.toml
crates/sea-g2p-rs/src/: lib.rs  punc.rs
crates/sea-g2p-rs/src/g2p/: mod.rs
crates/sea-g2p-rs/src/vi_normalizer/: datestime.rs  misc.rs  mod.rs  num2vi.rs  numerical.rs  resources.rs  technical.rs  units.rs
crates/studio/: Cargo.toml
crates/studio/assets/voicepack/: CREDITS.md  manifest.json
crates/studio/migrations/: 0001_init.sql  0002_runs.sql  0003_step_ctx.sql  0004_dub.sql  0005_dub_render.sql  0006_dub_blur_rect.sql  0007_dub_sub_pos.sql  0008_dub_vn_volume.sql  0009_dub_sub_style.sql  0010_voice_clones.sql  0011_voice_clone_builtin.sql  0012_dub_video_enabled.sql  0013_dub_overlays.sql  0014_dub_segment_offset.sql  0015_dub_video_offset.sql  0016_dub_clips.sql  0017_dub_sub_bg.sql  0018_burn_subtitles_default_on.sql  0019_dub_progress.sql  0020_dub_max_speakers.sql
crates/studio/src/: config.rs  db.rs  idempotency.rs  lib.rs  main.rs  media.rs  nodes.rs  packing.rs  ruin.rs  server.rs  template.rs  tts.rs  workflow.rs  youtube.rs
crates/studio/src/clones/: api.rs  mod.rs  seed.rs
crates/studio/src/dub/: api.rs  clients.rs  compose.rs  mod.rs  overlap.rs  pipeline.rs  subtitle.rs
crates/vieneu-cli/: Cargo.toml
crates/vieneu-cli/src/: main.rs
crates/vieneu-core/: Cargo.toml
crates/vieneu-core/assets/: voices_v3_turbo.json
crates/vieneu-core/examples/: bench.rs  bench_par.rs  smoke.rs
crates/vieneu-core/src/: artifacts.rs  audio.rs  config.rs  encode.rs  engine.rs  lib.rs  npz.rs  sampling.rs  text.rs  voices.rs
crates/vieneu-server/: Cargo.toml
crates/vieneu-server/src/: api.rs  jobs.rs  main.rs  pool.rs
docs/: MACOS-INTEL.md  MEDIA-AI-RUST.md  WINDOWS.md  clip-timeline-plan.md
scripts/: dev.sh
services/media-ai/: .env.example  README.md  agegender.py  analyze.py  app.py  asr.py  diarize.py  pyproject.toml
tools/: export-agegender-onnx.py  export-separation-onnx.py  export-speaker-embedding-onnx.py  upload-models.sh
ui/: index.html  package.json  pnpm-lock.yaml
ui/src/: App.css  api.ts  clonedVoices.ts  index.css  main.tsx  platform.ts  queue.ts  recorder.ts  router.tsx  studioApi.ts  ttsSettings.tsx  wav.ts
ui/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/runtime/: .gitkeep
ui/src-tauri/src/: lib.rs
ui/src/components/: ApiInfo.tsx  ClonePanel.tsx  Dropdown.tsx  Help.tsx  QueuePanel.tsx  StudioSettings.tsx
ui/src/components/dubbing/: Preview.tsx  SettingsDialog.tsx  VideoInfoBar.tsx  shared.ts
ui/src/components/flow/: BlockNode.tsx  Inspector.tsx  RunDetail.tsx  nodes.ts
ui/src/routes/: apiInfo.tsx  dubbing.tsx  flowsEditor.tsx  flowsHome.tsx  root.tsx  runs.tsx  settings.tsx  studio.tsx
ui/src/studio-shell/: DubList.tsx  Home.tsx  Onboarding.tsx  StudioShell.tsx  icons.tsx  tabs.ts  theme.ts  ui.tsx
ui/src/studio-shell/videostudio/: ClipPreview.tsx  DubAudioLayer.tsx  HistoryPanel.tsx  Inspector.tsx  LeftPanel.tsx  OverlayLayer.tsx  PreviewStage.tsx  ProjectSettings.tsx  Timeline.tsx  TimelineEditor.tsx  TopBar.tsx  VideoStudio.tsx  clipMap.ts  constants.ts  seed.ts  subtitleStyle.ts  timelineEditor.css  trackmap.ts  types.ts  useDubProject.ts  useEditorHistory.ts  useStudio.ts  useTransport.ts
