[package]
name = "media-ai"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "media-ai"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
hf-hub.workspace = true
hound.workspace = true
# ASR. whisper.cpp is built from source via cmake (Metal on macOS / CPU elsewhere).
whisper-rs = "0.16"
