[package]
name = "studio"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Webnovel → TTS audiobook → YouTube automation (reads Ruin, narrates via vieneu-server)"

[[bin]]
name = "studio-server"
path = "src/main.rs"

[lib]
name = "studio"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
axum = { workspace = true, features = ["multipart"] }
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
clap.workspace = true
reqwest.workspace = true
handlebars.workspace = true
sqlx.workspace = true
sha2.workspace = true
chrono.workspace = true
futures.workspace = true
async-trait = "0.1"
include_dir = "0.7"
