[package]
name = "vieneu-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "vieneu"
path = "src/main.rs"

[dependencies]
vieneu-core.workspace = true
anyhow.workspace = true
clap.workspace = true
hound.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
