[package]
name = "vieneu-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "vieneu-server"
path = "src/main.rs"

[dependencies]
vieneu-core.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hound.workspace = true
uuid.workspace = true
clap.workspace = true
async-channel = "2"
ndarray = { workspace = true }
